# smudge

./: .appveyor.yml  .gitignore  .hgignore  .travis.yml  Args.hs  CHANGES  Grammar.hs  LICENSE  Main.hs  Makefile  Model.hs  README  README.md  Semantics.hs  Setup.hs  clean-tutorial.sh  grammar.hs  main.hs  makeman.py  mux  mux.smudge  setup.iss.in  smudge  smudge.cabal  stack.yaml  syntax  syntax.ebnf  tar-up-release.sh  todo  turnstyle.smudge
Backends/: Backend.hs  CStatic.hs  GraphViz.hs  SmudgeIR.hs
Grammars/: C89.hs  Smudge.hs
Parsers/: Id.hs  Smudge.hs
Semantics/: Alias.hs  Basis.hs  DeclaredEventNames.hs  DeclaredStateNames.hs  NoTransientStateCycles.hs  OneInitialState.hs  Operation.hs  Semantic.hs  Solver.hs  UninstantiableTypes.hs  UniqueStateNames.hs  ValidDestinationStates.hs
Trashcan/: FilePath.hs  GetOpt.hs  Graph.hs  These.hs
Unparsers/: C89.hs
app/: Args.hs  Main.hs
debian/: changelog  control  copyright  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  smudge.cron.d.ex  smudge.doc-base.EX
docs/: release-checklist.txt  smudge.1
docs/definition/: Makefile  abnftosyntax.sh  ascii.abnf  lexer.abnf  smudge-definition.latex  syntax.abnf  unicode.abnf
docs/tutorial/: Makefile  any_event.c  any_state.c  broken.c  default_events.smudge  default_states.smudge  dynamic_payloads.c  enter_exit.smudge  events.c  final.smudge  fixed.c  initial.smudge  message_passing.c  messages.smudge  msm.smudge  multism.c  payloads.c  queue.c  queue.h  side_effects.smudge  transient.smudge  transitionless.smudge  tutorial.rst  use_enter_exit.c  use_side_effects.c  use_transient.c  use_transitionless.c
docs/tutorial/1/: Makefile  main  main.c
docs/tutorial/2/: main.c
docs/tutorial/3/: main.c
docs/tutorial/4/: Makefile  main.c  turnstyle.smudge
docs/tutorial/5/: Makefile  main.c  turnstyle.smudge
docs/tutorial/6/: main.c
docs/tutorial/7/: main.c  turnstyle.smudge
docs/tutorial/8/: Makefile  main.c
docs/tutorial/9/: Makefile  main.c  turnstyle.smudge
docs/tutorial/q/: Makefile  qtest  queue.c  queue.h  testq.c
editors/emacs/: smudge-mode.el  smudge.el
editors/vim/ftdetect/: smudge.vim
editors/vim/syntax/: smudge.vim
examples/: Makefile  anyany.smudge  cluster.smudge  first.smudge  halt.smudge  showoff.smudge  turnstile.smudge  turnstyle.smudge
examples/counterexamples/: badsideeffectname.smudge  badstatename.smudge  leadingdigit.smudge  leadingunderscore.smudge  noanyenterexit.smudge  nodecidablenontermination.smudge  nosentanyevents.smudge  notargetanystates.smudge  notransientanystate.smudge  notransientstatecycles.smudge  noundecidabletermination.smudge  oneeventhandlerperstate.smudge  oneinitialstate.smudge  uninstantiabletypes.smudge  uniquestatenames.smudge
roadmap/0.3/: 14  15  17  27  32  33  34
roadmap/0.3.1/: 25  48  51
roadmap/0.4/: 22  23  29  39
roadmap/0.5/: 13  60  65
roadmap/0.6/: 37  38  44  47  52  53  59  64  69  72
roadmap/0.7/: 21  28  43  58  61  62  63  67  73
roadmap/0.8/: 74  75  77  79  80  84  85  86
roadmap/0.9/: 71  76
roadmap/1.0/: 19  20
roadmap/2.0/: 24  42  46  54  55  56  57  70  81  82  83
src/Data/: These.hs
src/Data/Graph/: Extra.hs
src/Data/GraphViz/Attributes/: Extra.hs
src/Language/C89/: Grammar.hs  Unparser.hs
src/Language/Smudge/: Grammar.hs  Passes.hs
src/Language/Smudge/Backends/: Backend.hs  CStatic.hs  (+2 more)
src/System/FilePath/: Extra.hs
tickets/: mkticket.sh
tickets/closed/: 1  1 - Any Events  10  11  12  13  14  15  17  18  2  2 - Transient States  27  3  3 - Function Prototypes  30  31  33  35  36  37  38  39  44  45  47  48  50  51  53  58  6  60  64  66  68  7  73  79  8  (+2 more)
tickets/open/: 11  13  14  15  16  17  19  20  21  22  23  24  25  26  28  29  31  32  34  38  39  4  4 - Recursion  41  42  43  46  47  48  49  5  5 - Entry Point  51  52  53  54  55  56  57  59  (+27 more)
(+29 files in other folders)
