name:                smudge
version:             0.7.1
synopsis:            A tool to interpret state machines and automatically generate documentation and implementation.
-- description:         
homepage:            https://github.com/smudgelang/smudge#readme
license:             BSD3
license-file:        LICENSE
author:              Nate Bragg, Nathan Michaels
maintainer:          Nate Bragg <nate@cs.tufts.edu>
copyright:           Bose Corporation
category:            Language
build-type:          Custom
extra-source-files:  README.md
cabal-version:       >=1.10

custom-setup
  setup-depends: base (>= 4.6), Cabal, filepath, process

library
  hs-source-dirs:    src
  exposed-modules:   Data.Graph.Extra
                     Language.Smudge.Backends.Backend
                     Language.Smudge.Backends.CStatic
                     Language.Smudge.Backends.GraphViz
                     Language.Smudge.Backends.SmudgeIR
                     Language.Smudge.Grammar
                     Language.Smudge.Lexer.Ascii
                     Language.Smudge.Lexer.Unicode
                     Language.Smudge.Lexer.Char
                     Language.Smudge.Lexer.Id
                     Language.Smudge.Lexer.Smudge
                     Language.Smudge.Lexer.Token
                     Language.Smudge.Parser.Smudge
                     Language.Smudge.Parsers.Id
                     Language.Smudge.Passes
                     Language.Smudge.Passes.DeclaredEventNames
                     Language.Smudge.Passes.DeclaredStateNames
                     Language.Smudge.Passes.NoAnyEnterExit
                     Language.Smudge.Passes.NoDecidableNontermination
                     Language.Smudge.Passes.NoUndecidableTermination
                     Language.Smudge.Passes.NoSentAnyEvents
                     Language.Smudge.Passes.NoTargetAnyStates
                     Language.Smudge.Passes.NoTransientAnyState
                     Language.Smudge.Passes.NoTransientStateCycles
                     Language.Smudge.Passes.OneEventHandlerPerState
                     Language.Smudge.Passes.OneInitialState
                     Language.Smudge.Passes.Passes
                     Language.Smudge.Passes.UninstantiableTypes
                     Language.Smudge.Passes.UniqueStateNames
                     Language.Smudge.Semantics.Alias
                     Language.Smudge.Semantics.Basis
                     Language.Smudge.Semantics.Model
                     Language.Smudge.Semantics.Operation
                     Language.Smudge.Semantics.Solver
                     System.Console.GetOpt.Extra
  other-modules:     System.FilePath.Extra
                     Language.C89.Grammar
                     Language.C89.Unparser
                     Data.GraphViz.Attributes.Extra
                     Data.These
  build-depends:     base >= 4.7 && < 5,
                     containers,
                     directory,
                     fgl,
                     filepath,
                     graphviz,
                     monoidal-containers,
                     mtl,
                     parsec,
                     pretty,
                     semigroups,
                     text,
                     transformers,
                     word-wrap
  default-language:  Haskell2010

executable smudge
  hs-source-dirs:    app
  main-is:           Main.hs
  other-modules:     PackageInfo, Args
  build-depends:     base >= 4.7 && < 5,
                     Cabal,
                     containers,
                     fgl,
                     filepath,
                     parsec,
                     smudge,
                     transformers
  default-language:  Haskell2010

source-repository head
  type:     git
  location: https://github.com/smudgelang/smudge

